--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,7 @@
 {
+	"editor.defaultFormatter": "dprint.dprint",
 	"files.associations": {
 		".all-contributorsrc": "json",
 		"devenv.lock": "json"
-	},
-	"[markdown]": {
-		"editor.defaultFormatter": "esbenp.prettier-vscode"
 	}
 }
