build: update everything to the latest versions

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -5,7 +5,7 @@
 		"README-nl.md",
 		"README-en.md"
 	],
-	"commitConvention": "gitmoji",
+	"commitConvention": "angular",
 	"contributors": [
 		{
 			"login": "mahtaran",
