--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -1,11 +1,11 @@
 version: 2
 updates:
   - package-ecosystem: "github-actions"
-    directory: "/"
+    directory: ".github/workflows/"
     schedule:
       interval: "daily"
     commit-message:
-      prefix: "⬆️ "
+      prefix: "build"
     assignees:
       - "dependabot[bot]"
     reviewers:
